fix(ui): fix layout issue with the code editor

--- a/src/pages/component/_template/code-html.scss
+++ b/src/pages/component/_template/code-html.scss
@@ -1,10 +1,6 @@
 @use "../../../styles/variables" as *;
 
 .codes-container {
-  max-width: 945px;
-  // TODO: layout is a mess.
-  // CodeMirror force the HTML editor to be very wide.
-
   margin: auto;
   margin-block: 1.5em;
 
@@ -30,7 +26,7 @@
 }
 
 .html-editor {
-  max-width: 100%;
+  contain: inline-size;
 }
 
 .copy-status {
